# cuts

./: .gitignore  ;w  ;wa  README.md  cmd  config.h  cuts.c  cuts.h  dump  genprotos.sh  meson.build  meson_options.txt  send.sh
backend/: backend.c  backend.h  drm.c  drm.h  input.c  input.h  meson.build  session.c  session.h  util.c  util.h
backend/drm/: cursor.c  cursor.h  drm.c  drm.h  util.c  util.h
backend/input/: keycodes.h
backend/seat/: daemon.c  libseat.c  meson.build  seat.c  seat.h  sock.c  sock.h  util.c  util.h  vt.c  vt.h
backend/seat/cutseat/: cutseat.c  daemon.c  sock.h
backend/seat/diazepam/: daemon.c  seat.c  sock.c  sock.h
compositor/: compositor.c  compositor.h  error.c  error.h  handlers.c  meson.build  scene.c  scene.h  server.c  server.h  window.c  window.h
compositor/proto/: wayland.h  xdg-shell.c  xdg-shell.h
render/: buffer.c  buffer.h  cursor.c  cursor.h  egl.c  egl.h  egl_gbm_example.c  gbm.c  meson.build  render.c  render.h  types.h  vulkan.c  vulkan.h  window.c  window.h
render/gl/: egl.c  egl.h  gles.c  gles.h
render/gl/shaders/: shader.frag  shader.vert
render/vulkan/: vulkan.c  vulkan.h
scripts/: protogen.py  wayland-codegen.py
server/: codegen.py  error.c  error.h  handlers.c  server.c  server.h  wayland.c  wayland.h
src/: main.c
util/: bitmap.c  bitmap.h  event_loop.c  event_loop.h  helpers.c  helpers.h  list.c  list.h  log.c  log.h  malloc.c  malloc.h  map.c  map.h  meson.build  shm.c  shm.h  signal.c  signal.h
wayland/: display.c  display.h  error.c  error.h  handlers.c  meson.build  server.c  server.h  types.c  types.h  util.c  util.h  window.h
wayland/handlers/: linux-dmabuf-v1.c  wayland.c  xdg-shell.c
wayland/impl/: linux-dmabuf-v1.c  wayland.c  xdg-decoration-unstable-v1.c  xdg-shell.c
wayland/proto/: linux-dmabuf-v1.c  linux-dmabuf-v1.h  wayland.c  xdg-decoration-unstable-v1.c  xdg-shell.c  xdg-shell.h
wayland/protocols/: wayland.c  wayland.h
wayland/scripts/: codegen.py
wayland/types/: linux-dmabuf-v1.c  linux-dmabuf-v1.h  wayland.c  wayland.h  xdg-decoration-unstable-v1.c  xdg-decoration-unstable-v1.h  xdg-shell.c  xdg-shell.h
